# bqtj-wiki-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: __init__.py  arm_map.py
core/: __init__.py  cleaner.py  converter.py  parser.py
scripts/: parse_arms.py  parse_skills.py  parse_things.py  patch_things.py
