[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bqtj_wiki_tools"
version = "0.1.0"
description = "爆枪突击 Wiki 数据处理工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["core*", "config*", "scripts*"]
exclude = ["xml*", "data*", "materials*"]
